--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -303,127 +303,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>school_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
-       "      <td>4976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Johnson High School</th>\n",
-       "      <td>4761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hernandez High School</th>\n",
-       "      <td>4635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
-       "      <td>3999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
-       "      <td>2949</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Huang High School</th>\n",
-       "      <td>2917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ford High School</th>\n",
-       "      <td>2739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>2283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
-       "      <td>1858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wright High School</th>\n",
-       "      <td>1800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shelton High School</th>\n",
-       "      <td>1761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>1635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>1468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pena High School</th>\n",
-       "      <td>962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Holden High School</th>\n",
-       "      <td>427</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       school_name\n",
-       "Bailey High School            4976\n",
-       "Johnson High School           4761\n",
-       "Hernandez High School         4635\n",
-       "Rodriguez High School         3999\n",
-       "Figueroa High School          2949\n",
-       "Huang High School             2917\n",
-       "Ford High School              2739\n",
-       "Wilson High School            2283\n",
-       "Cabrera High School           1858\n",
-       "Wright High School            1800\n",
-       "Shelton High School           1761\n",
-       "Thomas High School            1635\n",
-       "Griffin High School           1468\n",
-       "Pena High School               962\n",
-       "Holden High School             427"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'SeriesGroupBy' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-86-ad9578a965d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mschool_summary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Average Math Score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'math_score'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mschool_summary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Average Reading Score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'reading_score'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mschool_pass_math\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'math_score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'size'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mschool_pass_reading\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'reading_score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'size'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mschool_overall_pass\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'math_score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'reading_score'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mschool_groups\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'size'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'SeriesGroupBy' and 'int'"
+     ]
     }
    ],
    "source": [
-    "school_names = school_data_complete['school_name'].value_counts()\n",
-    "school_summary = pd.DataFrame(school_names)\n",
-    "unique_schools = school_data_complete.drop_duplicates(subset = ['School ID'])\n",
-    "school_summary.merge(unique_schools, left_index = True, right_index = True, how = 'outer')\n",
+    "school_summary = school_data_complete.drop_duplicates(subset='school_name')\n",
+    "school_summary = school_summary[['school_name', 'type', 'size', 'budget']]\n",
+    "school_summary.set_index('school_name', inplace = True)\n",
+    "school_summary = school_summary.rename(columns = {'type': 'School Type', 'size': 'Total Student', 'budget': 'Total Budget'})\n",
+    "school_summary['Per Student Budget'] = school_summary['Total Budget']/school_summary['Total Student']\n",
+    "school_groups = school_data_complete.groupby('school_name')\n",
+    "school_summary['Average Math Score'] = school_groups['math_score'].mean()\n",
+    "school_summary['Average Reading Score'] = school_groups['reading_score'].mean()\n",
+    "school_summary['% Passing Math'] = school_groups['math_score'].count()/school_groups['size'])*100\n",
+    "school_pass_math = (len(school_groups['math_score'] >= 70)/school_groups['size'])*100\n",
+    "school_pass_reading = (len(school_groups['reading_score'] >= 70)/school_groups['size'])*100\n",
+    "school_overall_pass = (len(school_groups['math_score'] >= 70) & (school_groups['reading_score'] >= 70)/school_groups['size'])*100\n",
+    "school_summary = school_summary.rename_axis(None)\n",
     "school_summary"
    ]
   },
