--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "metadata": {
     "scrolled": true
    },
@@ -669,8 +669,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>School Type</th>\n",
-       "      <th>Total Students</th>\n",
-       "      <th>Total School Budget</th>\n",
+       "      <th>Total Student</th>\n",
+       "      <th>Total Budget</th>\n",
        "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
@@ -745,12 +745,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                    School Type  Total Students Total School Budget  \\\n",
-       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
-       "Thomas High School      Charter            1635       $1,043,130.00   \n",
-       "Griffin High School     Charter            1468         $917,500.00   \n",
-       "Wilson High School      Charter            2283       $1,319,574.00   \n",
-       "Pena High School        Charter             962         $585,858.00   \n",
+       "                    School Type  Total Student   Total Budget  \\\n",
+       "Cabrera High School     Charter           1858  $1,081,356.00   \n",
+       "Thomas High School      Charter           1635  $1,043,130.00   \n",
+       "Griffin High School     Charter           1468    $917,500.00   \n",
+       "Wilson High School      Charter           2283  $1,319,574.00   \n",
+       "Pena High School        Charter            962    $585,858.00   \n",
        "\n",
        "                    Per Student Budget  Average Math Score  \\\n",
        "Cabrera High School            $582.00           83.061895   \n",
@@ -774,12 +774,15 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "top_passing = school_summary.sort_values('% Overall Passing', ascending = False)\n",
+    "top_passing.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -797,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -822,8 +825,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>School Type</th>\n",
-       "      <th>Total Students</th>\n",
-       "      <th>Total School Budget</th>\n",
+       "      <th>Total Student</th>\n",
+       "      <th>Total Budget</th>\n",
        "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
@@ -898,12 +901,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                      School Type  Total Students Total School Budget  \\\n",
-       "Rodriguez High School    District            3999       $2,547,363.00   \n",
-       "Figueroa High School     District            2949       $1,884,411.00   \n",
-       "Huang High School        District            2917       $1,910,635.00   \n",
-       "Hernandez High School    District            4635       $3,022,020.00   \n",
-       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "                      School Type  Total Student   Total Budget  \\\n",
+       "Rodriguez High School    District           3999  $2,547,363.00   \n",
+       "Figueroa High School     District           2949  $1,884,411.00   \n",
+       "Huang High School        District           2917  $1,910,635.00   \n",
+       "Hernandez High School    District           4635  $3,022,020.00   \n",
+       "Johnson High School      District           4761  $3,094,650.00   \n",
        "\n",
        "                      Per Student Budget  Average Math Score  \\\n",
        "Rodriguez High School            $637.00           76.842711   \n",
@@ -927,12 +930,15 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "bottom_passing = school_summary.sort_values('% Overall Passing', ascending = True)\n",
+    "bottom_passing.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
