Commented code throughout

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -247,20 +247,33 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Calculating the number of total schools by measuring the length of an array of each school named in the dataframe\n",
     "total_schools = len(school_data_complete['School ID'].unique())\n",
+    "\n",
+    "# Calculating the number of total students by measuring the length of an array of each student name in the dataframe\n",
     "total_students = len(school_data_complete['Student ID'].unique())\n",
+    "\n",
+    "# Calculating the total district budget taking the sum of each school's budget. First must reduce database so that only one row of\n",
+    "# information appears for each school (safe since the budget column also shows duplicates for each school)\n",
     "total_budget = school_data_complete.drop_duplicates(subset = ['School ID'])['budget'].sum()\n",
+    "\n",
+    "# Using mean method to get average math and reading scores for district\n",
     "avg_math = school_data_complete['math_score'].mean()\n",
     "avg_reading = school_data_complete['reading_score'].mean()\n",
+    "\n",
+    "# Calculating the % passing by measuring length of array of student IDs associated with individual scores 70 or greater \n",
+    "# and dividing by the total_students variable created above (result times 100)\n",
     "pct_pass_math = (len(school_data_complete.loc[(school_data_complete['math_score'] >= 70), ['Student ID']])/total_students)*100\n",
     "pct_pass_reading = (len(school_data_complete.loc[(school_data_complete['reading_score'] >= 70), ['Student ID']])/total_students)*100\n",
     "overall_pass = (len(school_data_complete.loc[(school_data_complete['math_score'] >= 70) & (school_data_complete['reading_score'] >= 70), ['Student ID']])/total_students)*100\n",
+    "\n",
+    "# Creating a dataframe \"district_summary\" containing all the calculations above\n",
     "district_summary = pd.DataFrame({'Total Schools': [total_schools],\n",
     "                                'Total Students': [total_students],\n",
     "                                'Total Budget': [total_budget],\n",
@@ -270,6 +283,7 @@
     "                                '% Passing Reading': [pct_pass_reading],\n",
     "                                '% Overall Passing': [overall_pass]})\n",
     "\n",
+    "# Formatting Total Students and Total Budget columns. Displaying final district_summary dataframe\n",
     "district_summary['Total Students'] = district_summary['Total Students'].map(\"{:,.0f}\".format)\n",
     "district_summary['Total Budget'] = district_summary['Total Budget'].map(\"${:,.2f}\".format)\n",
     "district_summary"
@@ -303,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -593,21 +607,32 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Removing any rows in which a school's name is repeated in school_data_complete dataframe and creating a new school_summary dataframe\n",
     "school_summary = school_data_complete.drop_duplicates(subset='school_name')\n",
+    "\n",
+    "# Reducing the columns in school_summary dataframe to only those needed\n",
     "school_summary = school_summary[['school_name', 'type', 'size', 'budget']]\n",
+    "\n",
+    "# Setting index as school name and renaming the columns\n",
     "school_summary.set_index('school_name', inplace = True)\n",
     "school_summary = school_summary.rename(columns = {'type': 'School Type', 'size': 'Total Students', 'budget': 'Total Budget'})\n",
+    "\n",
+    "# Calculating the per student budget as each school's budget divided by the number of students\n",
     "school_summary['Per Student Budget'] = school_summary['Total Budget']/school_summary['Total Students']\n",
+    "\n",
+    "# Grouping rows for each school together and calculating the average math and reading score for each school\n",
     "school_groups = school_data_complete.groupby('school_name')\n",
     "school_summary['Average Math Score'] = school_groups['math_score'].mean()\n",
     "school_summary['Average Reading Score'] = school_groups['reading_score'].mean()\n",
     "\n",
+    "# Creating 3 dataframes containing rows with passing math scores, reading scores, or passing scores in both. Grouping rows for\n",
+    "# each school together in each of the 3 dataframes\n",
     "math_pass_df = school_data_complete.loc[(school_data_complete['math_score'] >= 70)]\n",
     "reading_pass_df = school_data_complete.loc[(school_data_complete['reading_score'] >= 70)]\n",
     "both_pass_df = school_data_complete.loc[(school_data_complete['math_score'] >= 70) & (school_data_complete['reading_score'] >= 70)]\n",
@@ -615,11 +640,16 @@
     "reading_group = reading_pass_df.groupby('school_name')\n",
     "both_group = both_pass_df.groupby('school_name')\n",
     "\n",
+    "# Calculating % passing by taking count of rows for each school in groups created above, dividing that by total students at each school (all times 100)\n",
     "school_summary['% Passing Math'] = ((math_group['math_score'].count())/school_summary['Total Students'])*100\n",
     "school_summary['% Passing Reading'] = ((reading_group['reading_score'].count())/school_summary['Total Students'])*100\n",
     "school_summary['% Overall Passing'] = ((both_group['math_score'].count())/school_summary['Total Students'])*100\n",
+    "\n",
+    "# Removing subheader above index and sorting rows based on index (school names). Creating a new dataframe in the process\n",
     "school_summary_format = school_summary.rename_axis(None)\n",
     "school_summary_format.sort_index(inplace = True)\n",
+    "\n",
+    "# Formatting Total Budget and Per Student Budget columns. Displaying final school_summary_format dataframe\n",
     "school_summary_format['Total Budget'] = school_summary_format['Total Budget'].map(\"${:,.2f}\".format)\n",
     "school_summary_format['Per Student Budget'] = school_summary_format['Per Student Budget'].map(\"${:,.2f}\".format)\n",
     "school_summary_format\n"
@@ -641,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 162,
    "metadata": {
     "scrolled": true
    },
@@ -668,7 +698,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>School Type</th>\n",
-       "      <th>Total Student</th>\n",
+       "      <th>Total Students</th>\n",
        "      <th>Total Budget</th>\n",
        "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
@@ -744,12 +774,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                    School Type  Total Student   Total Budget  \\\n",
-       "Cabrera High School     Charter           1858  $1,081,356.00   \n",
-       "Thomas High School      Charter           1635  $1,043,130.00   \n",
-       "Griffin High School     Charter           1468    $917,500.00   \n",
-       "Wilson High School      Charter           2283  $1,319,574.00   \n",
-       "Pena High School        Charter            962    $585,858.00   \n",
+       "                    School Type  Total Students   Total Budget  \\\n",
+       "Cabrera High School     Charter            1858  $1,081,356.00   \n",
+       "Thomas High School      Charter            1635  $1,043,130.00   \n",
+       "Griffin High School     Charter            1468    $917,500.00   \n",
+       "Wilson High School      Charter            2283  $1,319,574.00   \n",
+       "Pena High School        Charter             962    $585,858.00   \n",
        "\n",
        "                    Per Student Budget  Average Math Score  \\\n",
        "Cabrera High School            $582.00           83.061895   \n",
@@ -773,12 +803,13 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Sorting school_summary_format dataframe (displaed above) by the % Overall Passing column in descending order\n",
     "top_passing = school_summary_format.sort_values('% Overall Passing', ascending = False)\n",
     "top_passing.head(5)"
    ]
@@ -799,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +855,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>School Type</th>\n",
-       "      <th>Total Student</th>\n",
+       "      <th>Total Students</th>\n",
        "      <th>Total Budget</th>\n",
        "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
@@ -900,12 +931,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                      School Type  Total Student   Total Budget  \\\n",
-       "Rodriguez High School    District           3999  $2,547,363.00   \n",
-       "Figueroa High School     District           2949  $1,884,411.00   \n",
-       "Huang High School        District           2917  $1,910,635.00   \n",
-       "Hernandez High School    District           4635  $3,022,020.00   \n",
-       "Johnson High School      District           4761  $3,094,650.00   \n",
+       "                      School Type  Total Students   Total Budget  \\\n",
+       "Rodriguez High School    District            3999  $2,547,363.00   \n",
+       "Figueroa High School     District            2949  $1,884,411.00   \n",
+       "Huang High School        District            2917  $1,910,635.00   \n",
+       "Hernandez High School    District            4635  $3,022,020.00   \n",
+       "Johnson High School      District            4761  $3,094,650.00   \n",
        "\n",
        "                      Per Student Budget  Average Math Score  \\\n",
        "Rodriguez High School            $637.00           76.842711   \n",
@@ -929,12 +960,13 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Sorting school_summary_format dataframe (displaed above) by the % Overall Passing column in ascending order\n",
     "bottom_passing = school_summary_format.sort_values('% Overall Passing', ascending = True)\n",
     "bottom_passing.head(5)"
    ]
@@ -965,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1124,27 +1156,31 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Creating a dataframe for each grade by compiling rows from original school_data_complete dataframe with that grade listed \n",
     "grade9_df = school_data_complete.loc[school_data_complete['grade'] == '9th']\n",
     "grade10_df = school_data_complete.loc[school_data_complete['grade'] == '10th']\n",
     "grade11_df = school_data_complete.loc[school_data_complete['grade'] == '11th']\n",
     "grade12_df = school_data_complete.loc[school_data_complete['grade'] == '12th']\n",
     "\n",
+    "# Grouping rows for each school in each grade-specific dataframe\n",
     "group9 = grade9_df.groupby('school_name')\n",
     "group10 = grade10_df.groupby('school_name')\n",
     "group11 = grade11_df.groupby('school_name')\n",
     "group12 = grade12_df.groupby('school_name')\n",
     "\n",
+    "# Calculating average math score within each grade\n",
     "avg_math9 = group9['math_score'].mean()\n",
     "avg_math10 = group10['math_score'].mean()\n",
     "avg_math11 = group11['math_score'].mean()\n",
     "avg_math12 = group12['math_score'].mean()\n",
     "\n",
+    "# Creating a new dataframe with math score average for each grade and removing index subheader. Displaying dataframe\n",
     "math_grade = pd.DataFrame({'9th': avg_math9, '10th': avg_math10, '11th': avg_math11, '12th': avg_math12})\n",
     "math_grade = math_grade.rename_axis(None)\n",
     "math_grade"
@@ -1166,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1325,17 +1361,19 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Calculating average reading score within each grade using groups created in math score section \n",
     "avg_reading9 = group9['reading_score'].mean()\n",
     "avg_reading10 = group10['reading_score'].mean()\n",
     "avg_reading11 = group11['reading_score'].mean()\n",
     "avg_reading12 = group12['reading_score'].mean()\n",
     "\n",
+    "# Creating a new dataframe with reading score average for each grade and removing index subheader. Displaying dataframe\n",
     "reading_grade = pd.DataFrame({'9th': avg_reading9, '10th': avg_reading10, '11th': avg_reading11, '12th': avg_reading12})\n",
     "reading_grade = reading_grade.rename_axis(None)\n",
     "reading_grade"
@@ -1362,14 +1400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-158-0584573008e4>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-166-0584573008e4>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1473,18 +1511,24 @@
        "$645-680                                   53.53  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Setting bin boundaries and labels to group schools by spending\n",
     "spend_bins = [0, 585, 630, 645, 680]\n",
     "spend_labels = ['<$585', '$585-630', '$630-645', '$645-680']\n",
     "\n",
+    "# Creating a school_spending dataframe with columns from school_summary dataframe (unformatted numbers)\n",
     "school_spending = school_summary[['Per Student Budget', 'Average Math Score', 'Average Reading Score', '% Passing Math', '% Passing Reading', '% Overall Passing']]\n",
+    "\n",
+    "# Assigning rows to spending bins and placing bin labels in new column. Deleting Per Student Budget column after binning\n",
     "school_spending['Spending Ranges (Per Student)'] = pd.cut(school_spending['Per Student Budget'], spend_bins, labels=spend_labels)\n",
     "del school_spending['Per Student Budget']\n",
+    "\n",
+    "# Grouping rows by their bin assignments and calculating the averages for all columns in each bin to 2 decimal places\n",
     "spending_group = school_spending.groupby('Spending Ranges (Per Student)')\n",
     "round(spending_group.mean(),2)"
    ]
@@ -1505,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {
     "scrolled": true
    },
@@ -1514,7 +1558,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-153-a440ae997d65>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-167-a440ae997d65>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1601,18 +1645,24 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Setting bin boundaries and labels to group schools by size\n",
     "size_bins = [0, 999, 1999, 5000]\n",
     "size_labels = ['Small (<1000)', 'Medium (1000-2000)', 'Large (2000-5000)']\n",
     "\n",
+    "# Creating a school_size dataframe with columns from school_summary dataframe (unformatted numbers)\n",
     "school_size = school_summary[['Total Students', 'Average Math Score', 'Average Reading Score', '% Passing Math', '% Passing Reading', '% Overall Passing']]\n",
+    "\n",
+    "# Assigning rows to size bins and placing bin labels in new column. Deleting Total Students column after binning\n",
     "school_size['School Size'] = pd.cut(school_size['Total Students'], size_bins, labels=size_labels)\n",
     "del school_size['Total Students']\n",
+    "\n",
+    "# Grouping rows by their bin assignments and calculating the averages for all columns in each bin\n",
     "size_group = school_size.groupby('School Size')\n",
     "size_group.mean()"
    ]
@@ -1633,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1705,14 +1755,16 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Creating a school_type dataframe with columns from school_summary dataframe (unformatted numbers)\n",
     "school_type = school_summary[['School Type', 'Average Math Score', 'Average Reading Score', '% Passing Math', '% Passing Reading', '% Overall Passing']]\n",
     "\n",
+    "# Grouping rows by the school type listed and calculating the averages for all columns in each group\n",
     "type_group = school_type.groupby('School Type')\n",
     "type_group.mean()"
    ]
